# Zed

./: Cargo.toml
crates/gitview_ui/: Cargo.toml
crates/gitview_ui/src/: gitview_item.rs  gitview_ui.rs  graph.rs
crates/lean_git_core/: Cargo.toml
crates/lean_git_core/examples/: gitview_demo.rs
crates/lean_git_core/src/: config.rs  error.rs  lib.rs  limits.rs  models.rs  repo.rs  scheduler.rs  service.rs  state.rs  watch.rs
crates/lean_git_core/src/fs/: mod.rs  preview.rs  search.rs  tree.rs
crates/lean_git_core/src/git/: diff.rs  exec.rs  history.rs  mod.rs  status.rs  tree.rs
crates/lean_git_core/tests/: git_temp_repos.rs  local_bare_remote.rs  service_remote_roundtrip.rs
crates/title_bar/: Cargo.toml
crates/title_bar/src/: title_bar.rs
crates/zed/: Cargo.toml
crates/zed/src/: main.rs  visual_test_runner.rs  zed.rs
