[package]
name = "gitview_ui"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
name = "gitview_ui"
path = "src/gitview_ui.rs"

[dependencies]
lean_git_core.workspace = true
gpui.workspace = true
project.workspace = true
settings.workspace = true
theme.workspace = true
theme_settings.workspace = true
ui.workspace = true
ui_input.workspace = true
workspace.workspace = true
